WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259595
[iOS] Tap to revert does not always display an accurate prompt for multi-word autocorrections
https://bugs.webkit.org/show_bug.cgi?id=259595
Summary
[iOS] Tap to revert does not always display an accurate prompt for multi-word...
Aditya Keerthi
Reported
2023-07-28 08:52:17 PDT
rdar://113036177
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2023-07-28 08:54:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16164
EWS
Comment 2
2023-07-28 13:59:10 PDT
Committed
266398@main
(65175743b659): <
https://commits.webkit.org/266398@main
> Reviewed commits have been landed. Closing PR #16164 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug